Fix breakpoint list overflow (#1595)

--- a/src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/Breakpoint.css
+++ b/src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/Breakpoint.css
@@ -89,6 +89,7 @@
   justify-content: flex-start;
   align-items: flex-start;
   align-content: flex-start;
+  overflow: hidden;
 }
 
 .breakpoints-list .breakpoint-options > * {
